--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -89,7 +89,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../dist/img/portrait-small.jpg");
+      background: url("../img/portrait-small.jpg");
       background-size: cover;
       border-radius: 50%;
       border: solid 3px $secondary-color;
